--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-Hello World!
+<!DOCTYPE html>
+
+<html>
+<head>
+    <title>Cats</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+  <body>
+    <h1>CAT WEBSITE</h1>
+   <a href="catimages.html">Click here for our top <cat>cat</cat> images!</a>
+
+      
+  
+    <p>I like <cat>cats</cat> because:</p>
+    <ol>
+        <li>because they're CUTE</li>
+        <li>they're SOFT</li>
+    </ol>
+    <ul>
+        <li><cat>cats</cat> are better than <code>dogs</code></li>
+        <ul>
+            <li>(some people think that)</li>
+                <li>You don't have to take them on walks!</li>
+            <li>Most of them don't beg you for food! (However, <code>dogs</code> ALWAYS do)</li>
+            <li>They are very independent (You don't always have to play with them if you don't want to)</li>
+        </ul>
+        
+<h1>supplementary cat video</h1>
+        <iframe width="600" height="320" src="https://www.youtube.com/embed/XyNlqQId-nk" frameborder="0"allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         </ul>
+        <h2>Here is a website from our competitors:</h2>
+ 
+        <iframe width="910" height="309" src = "dogs.html"></iframe>
+  
+    <h1>MUCH OF THIS WEBSITE IS NOT TRUE.</h1>
+    <blockquote> "You don't have to be a <cat>cats</cat>, to know how a <cat>cat</cat> feels." - Emmanuel Steiner Robles, catologist</blockquote>
+</body></html>
+
