--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
         <iframe width="910" height="309" src = "dogs.html"></iframe>
   
     <h1>MUCH OF THIS WEBSITE IS NOT TRUE.</h1>
-    <blockquote> "You don't have to be a <cat>cats</cat>, to know how a <cat>cat</cat> feels." - Emmanuel Steiner Robles, catologist</blockquote>
+    <blockquote> "You don't have to be a <cat>cat</cat>, to know how a <cat>cat</cat> feels." - Emmanuel Steiner Robles, catologist</blockquote>
 </body></html>
 
