--- a/index.hello.html
+++ b/index.hello.html
@@ -1,5 +1,5 @@
- 
-<link rel="stylesheet" href="style.css">
+     <a href="index.html">  click here to go back!</a> 
+<link rel="stylesheet" href="boi.style.css">
  
 <div id="5DayWeather"></div>
  
