--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h2>Here is a website from our competitors:</h2>
  
         <iframe width="910" height="309" src = "dogs.html"></iframe>
-  
+     <a href="index.hello.html">  here is anther game by the cat web creater</a>
     <h1>MUCH OF THIS WEBSITE IS NOT TRUE.</h1>
     <blockquote> "You don't have to be a <cat>cat</cat>, to know how a <cat>cat</cat> feels." - Emmanuel Steiner Robles, catologist</blockquote>
 </body></html>
